Closed
Bug 64079
Opened 25 years ago
Closed 25 years ago
[MF][FIX][CBX]Drop-down listbox should disappear when it loses focus
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: jruderman, Assigned: rods)
Details
(Whiteboard: Fix in hand)
Attachments
(1 file)
|
793 bytes,
text/html
|
Details |
Steps to reproduce:
1. Load http://bugzilla.mozilla.org/query.cgi and scroll down to the "boolean
chart" section.
2. Click on the leftmost drop-down menu.
3. Hit tab.
Result: drop-down sticks around, but focus moves to another control.
Expected result: drop-down goes away, and focus moves to another control.
| Assignee | ||
Comment 2•25 years ago
|
||
When it lose focus it needs to rollup the drop down.
Status: NEW → ASSIGNED
Summary: Drop-down listbox should disappear when it loses focus → [MF][FIX][CBX]Drop-down listbox should disappear when it loses focus
Whiteboard: Fix in hand
| Assignee | ||
Comment 3•25 years ago
|
||
Comment 4•25 years ago
|
||
If you use this patch, please also change the spelling of "// Thiis ..." one
line further down in the patch.
| Assignee | ||
Comment 5•25 years ago
|
||
Patch;
Index: nsComboboxControlFrame.cpp
===================================================================
RCS file: /cvsroot/mozilla/layout/html/forms/src/nsComboboxControlFrame.cpp,v
retrieving revision 1.155
diff -u -r1.155 nsComboboxControlFrame.cpp
--- nsComboboxControlFrame.cpp 2000/12/20 23:25:39 1.155
+++ nsComboboxControlFrame.cpp 2001/01/02 16:28:47
@@ -496,7 +498,14 @@
void
nsComboboxControlFrame::SetFocus(PRBool aOn, PRBool aRepaint)
{
- mFocused = aOn?this:nsnull;
+ if (aOn) {
+ mFocused = this;
+ } else {
+ mFocused = nsnull;
+ if (mDroppedDown) {
+ ToggleList(mPresContext);
+ }
+ }
// Thiis is needed on a temporary basis. It causes the focus
// rect to be drawn. This is much faster than ReResolvingStyle
// Bug 32920
Comment 6•25 years ago
|
||
patch looks good.
r=kmcclusk@netscape.com
Comment 7•25 years ago
|
||
Looks good to me too. :) r=pollmann@netscape.com
| Assignee | ||
Comment 8•25 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•