When focus is removed and the the CBX is dropped down it rolls it up r=kmcclusk, sr=buster Bug 64079